--- a/DemoWeb/pom.xml
+++ b/DemoWeb/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>com.cn</groupId>
-            <artifactId>DemoServiceName</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
