--- a/Demoserver/pom.xml
+++ b/Demoserver/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>com.cn</groupId>
-            <artifactId>DemoServiceName</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
