--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,14 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>DemoServiceName</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>com.cn</groupId>
-            <artifactId>DemoDal</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <artifactId>common</artifactId>
 
 
 </project>
