日志输出到文件

--- a/DemoDal/src/main/resources/log4j.properties
+++ b/DemoDal/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #基本日志
-log4j.rootLogger=info,stdout,logFile
+log4j.rootLogger=info,stdout,rollFile
 #控制台输出
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
@@ -9,3 +9,11 @@ log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss,SSS}] %5p
 
 #打印sql语句
 log4j.logger.com.cn.dao = TRACE
+
+#文件输出
+#log4j.appender.rollFile = org.apache.log4j.RollingFileAppender
+#log4j.appender.rollFile.File = D:/demo.log
+#log4j.appender.rollFile.append = true
+#log4j.appender.rollFile.MaxFileSize = 50MB
+#log4j.appender.rollFile.layout=org.apache.log4j.PatternLayout
+#log4j.appender.rollFile.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss,SSS}] %5p %c{1}:%L - %m%n
