--- a/pay-web/pom.xml
+++ b/pay-web/pom.xml
@@ -1,24 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>distributedDemo</artifactId>
-        <groupId>com.cn</groupId>
+        <artifactId>afcatpay</artifactId>
+        <groupId>com.afcat</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>DemoWeb</artifactId>
+    <artifactId>pay-web</artifactId>
     <packaging>war</packaging>
     <name>DemoWeb Maven Webapp</name>
     <url>http://maven.apache.org</url>
+
+    <build>
+        <finalName>pay-web</finalName>
+    </build>
     <dependencies>
         <dependency>
-            <groupId>com.cn</groupId>
-            <artifactId>common</artifactId>
+            <groupId>com.afcat</groupId>
+            <artifactId>pay-share</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
-    <build>
-        <finalName>DemoWeb</finalName>
-    </build>
 </project>
