--- a/pay-sercuity/pom.xml
+++ b/pay-sercuity/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>distributedDemo</artifactId>
-        <groupId>com.cn</groupId>
+        <artifactId>afcatpay</artifactId>
+        <groupId>com.afcat</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Demomq</artifactId>
+    <artifactId>pay-sercuity</artifactId>
 
 
 </project>
