--- a/pay-dal/src/main/resources/log4j.properties
+++ b/pay-dal/src/main/resources/log4j.properties
@@ -10,10 +10,10 @@ log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss,SSS}] %5p
 #打印sql语句
 log4j.logger.com.cn.dao = TRACE
 
-#文件输出
-#log4j.appender.rollFile = org.apache.log4j.RollingFileAppender
-#log4j.appender.rollFile.File = D:/demo.log
-#log4j.appender.rollFile.append = true
-#log4j.appender.rollFile.MaxFileSize = 50MB
-#log4j.appender.rollFile.layout=org.apache.log4j.PatternLayout
-#log4j.appender.rollFile.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss,SSS}] %5p %c{1}:%L - %m%n
+#文件输出net
+log4j.appender.rollFile = org.apache.log4j.RollingFileAppender
+log4j.appender.rollFile.File = D:/payServer.log
+log4j.appender.rollFile.append = true
+log4j.appender.rollFile.MaxFileSize = 50MB
+log4j.appender.rollFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.rollFile.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss,SSS}] %5p %c{1}:%L - %m%n
