--- a/pay-web/pom.xml
+++ b/pay-web/pom.xml
@@ -8,8 +8,8 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>pay-web</artifactId>
     <packaging>war</packaging>
-    <name>DemoWeb Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <name>pay-web</name>
+
 
     <build>
         <finalName>pay-web</finalName>
