--- a/pay-dal/src/main/resources/log4j.properties
+++ b/pay-dal/src/main/resources/log4j.properties
@@ -1,16 +1,17 @@
-#»ù±¾ÈÕÖ¾
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö¾
 log4j.rootLogger=info,stdout,rollFile
-#¿ØÖÆÌ¨Êä³ö
+#ï¿½ï¿½ï¿½ï¿½Ì¨ï¿½ï¿½ï¿½
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.logger.com.afcat.dal.dao.ImUserDao=TRACE
 log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss,SSS}] %5p %c{1}:%L - %m%n
 #log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss,SSS}] [%t:%r]-[%p]%m%n
 
-#´òÓ¡sqlÓï¾ä
+#ï¿½ï¿½Ó¡sqlï¿½ï¿½ï¿½
 log4j.logger.com.cn.dao = TRACE
 
-#ÎÄ¼þÊä³ö
+#ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½
 #log4j.appender.rollFile = org.apache.log4j.RollingFileAppender
 #log4j.appender.rollFile.File = D:/demo.log
 #log4j.appender.rollFile.append = true
